<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ridna - Calendar of feelings</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_settings">Settings</string>
    <string name="bottom_main">Feed</string>
    <string name="bottom_relation">Relations</string>
    <string name="title_add_event">Add new</string>
    <string name="title_event">Event</string>
    <string name="title_main">Feed</string>
    <string name="title_events">Events</string>
    <string name="title_settings">Settings</string>
    <string name="title_relation">Relations</string>
    <string name="title_library">Libraries</string>
    <string name="next_goal">Current goal</string>
    <string name="relation_empty_title">It\'s empty now</string>
    <string name="relation_empty_description">You have to add your sweetheart to continue</string>
    <string name="relation_empty_add">Add</string>
    <string name="main_empty_title">It\'s empty now</string>
    <string name="main_empty_description">You have to add important events to continue</string>
    <string name="main_empty_add">Add events</string>
    <string name="see_all_events">View all events</string>
    <string name="big_event">Major Event:</string>
    <string name="title_this_day">This day:</string>
    <string name="btn_share">Share</string>
    <string name="btn_more_info">More</string>
    <string name="btn_pick_event">Pick</string>
    <string name="main_greeting">Have a good day!</string>
    <string name="title_edit">Edit</string>
    <string name="title_add">Add new</string>
    <string name="card_media_title">Media</string>
    <string name="card_media_description">You can change the background and add a picture of sweetheart, including GIF</string>
    <string name="chip_reset">Reset images</string>
    <string name="til_edit_name_first">Your name</string>
    <string name="til_edit_name_second">Sweetheart\'s name</string>
    <string name="til_edit_description">Small caption</string>
    <string name="chip_add_date">Add date</string>
    <string name="card_event_title">Important days</string>
    <string name="card_event_description">You can add important days from the list</string>
    <string name="btn_list">List</string>
    <string name="til_event_name">Event title*</string>
    <string name="til_event_description">Event description</string>
    <string name="checkbox_date">\u0020Add a reminder</string>
    <string name="title_list">List</string>
    <string name="title_help">Support</string>
    <string name="help_title">Support the app</string>
    <string name="help_description">The Ridna app is a small Ukrainian project that you can help make it bigger and better 🇺🇦</string>
    <string name="help_btn_share">Share App</string>
    <string name="btn_rate">Send Feedback</string>
    <string name="settings_lang_title">Change Language</string>
    <string name="settings_lang_en_code">English</string>
    <string name="settings_lang_uk_code">Ukrainian</string>
    <string name="settings_label_app">App</string>
    <string name="settings_label_data">Data</string>
    <string name="settings_label_email">Feedback</string>
    <string name="settings_label_etc">Other</string>
    <string name="settings_title_version">Version</string>
    <string name="settings_title_lib">Libraries</string>
    <string name="settings_title_privacy">Data protection</string>
    <string name="settings_title_email">Contact</string>
    <string name="settings_title_delete">Delete</string>
    <string name="settings_title_update">Update</string>
    <string name="settings_title_share">Share</string>
    <string name="settings_title_rate">Rate</string>
    <string name="settings_title_help">Help</string>
    <string name="settings_title_lang">Language</string>
    <string name="settings_label_help">Help the app</string>
    <string name="settings_label_rate">Send review</string>
    <string name="settings_label_share">Share App</string>
    <string name="settings_label_update">Update app</string>
    <string name="settings_label_delete">Delete all app data</string>
    <string name="settings_label_email2">Contact developer</string>
    <string name="settings_label_privacy">Privacy Policy</string>
    <string name="settings_label_lib">View licenses</string>
    <string name="settings_label_version">App version</string>
    <string name="settings_label_lang">Change app language</string>
    <string name="event_cant_be_empty">The title cannot be blank</string>
    <string name="unknown_error">Unknown error</string>
    <string name="throw_error">An error has occurred</string>
    <string name="snack_ok">Okay</string>
    <string name="event_dialog_cancel">Cancel</string>
    <string name="event_dialog_delete_title">Delete</string>
    <string name="event_dialog_delete">Delete</string>
    <string name="event_dialog_delete_all">Do you really want to remove all events from the list?</string>
    <string name="event_dialog_delete_one">Do you really want to delete this event? (%s)</string>
    <string name="dialog_pick_date">Pick date</string>
    <string name="error_description">Error: %s</string>
    <string name="image_reset">Images removed</string>
    <string name="error_image">Image was not uploaded</string>
    <string name="error_name">Name can\' t be blank</string>
    <string name="footer_text">Sent by Ridna: https://play.google.com/store/apps/details?id=%s</string>
    <string name="day_yesterday">Yesterday</string>
    <string name="day_today">Today</string>
    <string name="day_tomorrow">Tomorrow</string>
    <string name="day_month">In a month</string>
    <string name="day_week">In a week</string>
    <string name="day_in_day">In %s days</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_exit_body">Do you really want to exit?</string>
    <string name="dialog_exit_action">Exit</string>
    <string name="dialog_exit_cancel">Cancel</string>
    <string name="list_was_updated">The list was updated</string>
    <string name="add_success">Successfully added</string>
    <string name="default_share_text">Ridna - calendar of relationships! ❤\n\nDownload: https://play.google.com/store/apps/details?id=%s</string>
    <string name="dialog_pick_cancel">Cancel</string>
    <string name="dialog_pick_event">Pick event</string>
    <string name="relation_was_updated">Information was updated</string>
    <string name="n_days">%s days</string>
    <string name="data_deleted">All data has been deleted</string>
    <string name="dialog_delete_data_title">Delete data</string>
    <string name="dialog_delete_data_body">Do you really want to delete all app data?</string>
    <string name="dialog_delete_data_cancel">Cancel</string>
    <string name="dialog_delete_data_action">Delete</string>
    <string name="today_date">Today: %s</string>
    <string name="month_0">January</string>
    <string name="month_1">February</string>
    <string name="month_2">March</string>
    <string name="month_3">April</string>
    <string name="month_4">May</string>
    <string name="month_5">June</string>
    <string name="month_6">July</string>
    <string name="month_7">August</string>
    <string name="month_8">September</string>
    <string name="month_9">October</string>
    <string name="month_10">November</string>
    <string name="month_11">December</string>
    <string name="empty_day_title">It\'s empty now</string>
    <string name="empty_day_description">There are no important events on this day</string>
    <string name="empty_day_add">Add</string>
    <string name="event_0">First meeting</string>
    <string name="event_1">First walk</string>
    <string name="event_2">First hugs</string>
    <string name="event_3">Falling in Love 😍</string>
    <string name="event_4">Love confession</string>
    <string name="event_5">Beginning of a relationship ❤️</string>
    <string name="event_6">First gift</string>
    <string name="event_7">First kiss</string>
    <string name="event_8">First night 🌃</string>
    <string name="event_9">Meeting family </string>
    <string name="event_10">Journey together</string>
    <string name="event_11">Birthday 🎁</string>
    <string name="event_12">Start of living together</string>
    <string name="event_13">Marriage proposal</string>
    <string name="event_14">Marriage 💍</string>
</resources>