<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_round_close_24"
        app:navigationIconTint="?attr/colorPrimary"
        app:title="@string/title_add" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/shapeableImageView"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_margin="16dp"
                        android:background="?attr/colorSecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/CircleImage" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_outline_notifications_active_24"
                        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
                        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
                        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
                        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
                        app:tint="?attr/colorOnSecondary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/e_ukraine_medium"
                        android:text="@string/card_event_title"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/e_ukraine_regular"
                        android:text="@string/card_event_description"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        app:layout_constraintEnd_toStartOf="@+id/shapeableImageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_list"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/e_ukraine_medium"
                        android:text="@string/btn_list"
                        app:icon="@drawable/ic_round_playlist_add_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/til_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textCapSentences|text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/til_event_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:inputType="textMultiLine|text|textCapSentences"
                    android:minHeight="96dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:fontFamily="@font/e_ukraine_regular"
                android:text="@string/checkbox_date"
                app:buttonTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_add_date"
                app:chipIcon="@drawable/ic_round_access_time_24"
                app:ensureMinTouchTargetSize="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_done"
        style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_round_done_24" />

</FrameLayout>