<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/circle"
                    app:shapeAppearanceOverlay="@style/CircleImage"
                    app:tint="?attr/colorSecondaryContainer" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_outline_hive_24"
                    app:tint="?attr/colorOnSecondaryContainer" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/e_ukraine_medium"
                android:text="@string/main_empty_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/e_ukraine_regular"
                android:text="@string/main_empty_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_event"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/e_ukraine_medium"
                android:text="@string/main_empty_add"
                app:icon="@drawable/ic_round_add_24" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>