<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_this_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/e_ukraine_regular"
            android:text="@string/title_this_day"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/screenshot_container"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/click_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/shapeableImageView"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/CircleImage"
                        app:tint="?attr/colorSecondaryContainer" />

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_outline_today_24"
                        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
                        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
                        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
                        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
                        app:tint="?attr/colorOnSecondaryContainer" />


                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/e_ukraine_regular"
                    android:maxLines="2"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:text="Testing Design Text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/e_ukraine_regular"
                    android:text="@string/btn_share"
                    app:icon="@drawable/ic_outline_share_24" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/e_ukraine_regular"
            android:text="@string/btn_more_info"
            app:icon="@drawable/ic_round_arrow_forward_24"
            app:iconGravity="end" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>



